<resources>
    <string name="app_name" translatable="false">See Your Music</string>

    <!-- Stringhe activity main-->
    <string name="welcomeToSeeYourMusic" translatable="false">Benvenuto su See Your Music</string>
    <string name="login" translatable="false">Accedi</string>



    <string name="accedi_con_google" translatable="false">Accedi con Google</string>

    <!--    <string name="app_name">Firebase Auth</string>-->

    <string name="email" translatable="false">Login</string>
    <string name="password" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Stringhe navigation bar-->
    <string name="home" translatable="false">Home</string>
    <string name="cerca" translatable="false">Cerca</string>
    <string name="settings" translatable="false">Impostazioni</string>
    <string name="cerca_utenti" translatable="false">Cerca utenti</string>
    <string name="cerca2" translatable="false">Cerca</string>


    <string name="brani" translatable="false">Brani</string>
    <string name="Artisti" translatable="false">Artisti</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="second_activity" translatable="false">SECOND ACTIVITY</string>



    <!--First frament xml-->
    <string name="startSpotifyAuthentication" translatable="false">Inizia Autenticazione Spotify</string>

    <string name="topTracks" translatable="false">Top Brani</string>
    <string name="topArtists" translatable="false">Top Artisti</string>

    <!--Filtro-->
    <string name="lastMonth" translatable="false">Ultimo mese</string>
    <string name="lastSixMonth" translatable="false">Ultimi 6 mesi</string>
    <string name="ever" translatable="false">Sempre</string>



    <!-- Stringhe fragment third-->

    <!--Immagine profilo-->
    <string name="userImage" translatable="false" />
    <string name="editImageButton" translatable="false">Modifica l\'immagine del profilo</string>
    <string name="takePicture" translatable="false">Scatta una foto</string>
    <string name="choseFromGallery" translatable="false">Scegli dalla galleria</string>
    <string name="choseAnOption" translatable="false">"Scegli un\'opzione: "</string>/>

    <string name="following" translatable="false">Seguiti</string>
    <string name="reviewText" translatable="false">Recensioni</string>

    <!--Username-->
    <string name="username" translatable="false">"Nome utente: "</string>
    <string name="editNameButton" translatable="false">Modifica l\'username</string>
    <string name="enterYourName" translatable="false">Inserisci il tuo nome</string>
    <string name="save" translatable="false">Salva</string>
    <string name="cancel" translatable="false">Annulla</string>

    <!--Lingua-->
    <string name="language" translatable="false">"Lingua: "</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="english" translatable="false">Inglese</string>
    <string name="editLanguageButton" translatable="false">editLanguageButton</string>
    <string name="selectedLanguage" translatable="false">"Lingua selezionata: "</string>

    <!--Notifiche-->
    <string name="notification" translatable="false">Notifiche</string>
    <string name="newfollowers" translatable="false">"Nuovi seguaci: "</string>
    <string name="newreviews" translatable="false">"Nuove recensioni seguiti: "</string>
    <string name="switchNotificationButton" translatable="false">switch notification button</string>
    <string name="switchNFNButton" translatable="false">switch new followers notification button</string>
    <string name="switchNFRButton" translatable="false">switch new following review button</string>

    <!--Privacy-->
    <string name="privacy" translatable="false">Privacy</string>
    <string name="account" translatable="false">"Privacy account: "</string>
    <string name="everyone" translatable="false">Tutti</string>
    <string name="followers" translatable="false">Seguaci</string>
    <string name="review" translatable="false">"Recensioni: "</string>
    <string name="nobody" translatable="false">Nessuno</string>

    <!--Logout/delete-->
    <string name="signOut" translatable="false">LogOut</string>
    <string name="delete" translatable="false">Elimina Account</string>


    <string name="nome_utente" translatable="false"> Nome Utente</string>
    <string name="aggiungi_amico" translatable="false"> Aggiungi Amico</string>
    <string name="recensioni" translatable="false">Recensioni</string>
    <string name="top_track" translatable="false">Top Tracks</string>
    <string name="top_artist" translatable="false">Top Artists</string>


    <string name="followersNotification" translatable="false">Richieste di seguirti</string>
    <string name="reviewNotification" translatable="false">Recensioni</string>
    <string name="newFRequest" translatable="false">vuole iniziare a seguirti</string>
    <string name="delete1" translatable="false">Cancella</string>
    <string name="confirm" translatable="false">Conferma</string>
    <string name="newFollower">ha iniziato a seguirti</string>
    <string name="follow">Segui</string>
    <string name="following1">Smetti di\n seguire</string>

    <string name="newReviewNotification">ha appena scritto una nuova recensione della canzone</string>
    <string name="newResponseNotification">ha appena risposto alla tua recensione</string>
    <string name="newLikedReview">piace la tua recensione</string>
    <string name="newDislikedReview" translatable="false">non piace la tua recensione</string>
    <string name="clessidra" translatable="false">Clessidra</string>
    <string name="frecciaindietro" translatable="false">FrecciaIndietro</string>
    <string name="calendario" translatable="false">Calendario</string>
    <string name="clessidra1" translatable="false">Clessidra</string>
    <string name="griglia1" translatable="false">Griglia</string>
    <string name="contatorerecensioni" translatable="false">Contatore Recensioni</string>
    <string name="trackImage" translatable="false">Immagine canzone</string>

    <string name="remove" translatable="false">Rimuovi</string>
    <string name="requestSent" translatable="false">Richiesta inviata</string>
    <string name="album" translatable="false">Album</string>
    <string name="artista" translatable="false">Artista</string>
    <string name="Recensioni" translatable="false">Recensioni:</string>
    <string name="questo_account_privato" translatable="false">Questo account è privato</string>
    <string name="linear" translatable="false">Vista lineare</string>
    <string name="grid" translatable="false">Vista a griglia</string>
    <string name="Click_to_login" translatable="false">Register</string>
    <string name="la_noia">La noia</string>
    <string name="angelina_mango">Angelina Mango</string>
    <string name="tuta_gold">TUTA GOLD</string>
    <string name="mahmood">Mahmood</string>
    <string name="sinceramente">Sinceramente</string>
    <string name="annalisa">Annalisa</string>
    <string name="casa_mia">Casa Mia</string>
    <string name="ghali">Ghali</string>
    <string name="i_p_me_tu_p_te">I P\' ME, TU P\' TE</string>
    <string name="geolier">Geolier</string>
    <string name="click_boom">CLICK BOOM!</string>
    <string name="rose_villain">Rose Villain</string>

</resources>