<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_gray">

    <Button
        android:id="@+id/seelast4weeks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/lastMonth"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/seelast6month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/lastSixMonth"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/seeAlltime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:textColor="@color/white"
        android:text="@string/ever" />

</LinearLayout>
