<!-- res/layout/item_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Aggiungi un delimitatore tra gli elementi -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/followersImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/userImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!--        il testo sotto verrà tolto e inserito dal kt-->
        <TextView
            android:id="@+id/followersRequest"
            android:layout_width="151dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/newFollower"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/followersImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/followToggleButton"
            style="@style/CustomToggleButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/follow"
            android:textColor="@color/white"
            android:textOff="@string/follow"
            android:textOn="@string/following1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toEndOf="@+id/followersRequest"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"/>

</LinearLayout>