<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingEnd="16dp"
            android:paddingStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/usernameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_utente"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/backArrow"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/addFriendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_toEndOf="@+id/usernameHeader"
            android:backgroundTint="@color/verde_spotify"
            android:text="@string/aggiungi_amico" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sectionImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topSection" >

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/contatoreRecensioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recensioni"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/userProfileImage" />

        <TextView
            android:id="@+id/contatoreFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/contatoreRecensioni" />

        <TextView
            android:id="@+id/contatoreFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/contatoreFollowers" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_below="@+id/sectionImage" >

        <ImageView
            android:id="@+id/clessidra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twotone_hourglass_full_24"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingEnd="16dp"
            android:paddingStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_topBrani"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_track"
            android:layout_toEndOf="@+id/clessidra"
            android:backgroundTint="@color/verde_spotify" />

        <Button
            android:id="@+id/btn_topArtisti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_artist"
            android:layout_toEndOf="@+id/btn_topBrani"
            android:backgroundTint="@color/verde_spotify" />

        <ImageView
            android:id="@+id/calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_calendar_month_24"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_topArtisti"
            android:paddingEnd="16dp"
            android:paddingStart="8dp"
            android:layout_marginEnd="8dp"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUtenteTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUtenteArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:layout_below="@+id/section">
    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/recensioni"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gray"
        android:layout_below="@+id/recyclerViewUtenteArtist" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/verde_spotify"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/recensioni" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUtenteCommenti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/recensioni">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
